samples/_failures_safe/1761331666_cd0acb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_622b3f37.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_622b3f37.c:153:9: error: expected declaration or statement at end of input
  153 |         strncpy(str, state->input + start_pos, len);
      |         ^~~~~~~
./samples/SAFE/__tmp_622b3f37.c:153:9: error: expected declaration or statement at end of input
